rename auto_wake_up to auto_resume
